--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "MailChimp Devs <api@mailchimp.com> (http://mailchimp.com)",
-  "name": "mandrill-api",
+  "name": "mailchimp-api",
   "description": "The official API client for the MailChimp email service",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "homepage": "https://bitbucket.org/mailchimp/mailchimp-api-node",
   "repository": {
     "type": "git",
